require StepShouldRetry implementers have public, no arg ctor